--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>杰哥記帳</title>
+    <title>tsaiii記帳</title>
     <link rel="icon" type="image/png" href="./icon.png">
     <link rel="apple-touch-icon" href="./icon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./icon.png">
@@ -26,8 +26,8 @@
         <section id="landing-section" class="section landing-container">
             <div class="landing-card">
                 <div class="app-logo">💰</div>
-                <h1>杰哥的<br>私房錢記帳助手</h1>
-                <p class="subtitle">噓...這裡沒有發票，<br>只有男人的快樂與夢想！</p>
+                <h1>tsaiii的<br>私房錢記帳助手</h1>
+                <p class="subtitle">噓...這裡沒有發票，<br>只有快樂與夢想！</p>
                 <button id="go-login-btn" class="btn btn-primary btn-lg">開啟小金庫</button>
             </div>
         </section>
